gdk-includes/include/gdk/gdk.h

/** Boolean values */
#define GA_TRUE 1
#define GA_FALSE 0
/** A server session */
struct GA_session;
/** A Parsed JSON object */
typedef struct GA_json GA_json;
/** An api method call that potentially requires two factor authentication to complete */
struct GA_auth_handler;
/**
 * Free a GA_json object.
 *
 * :param json: GA_json object to free.
 */
GDK_API int GA_destroy_json(GA_json* json);
/**
 * Free an auth_handler after use.
 *
 * :param call: The auth_handler to free.
 */
GDK_API int GA_destroy_auth_handler(struct GA_auth_handler* call);
/**
 * Enable or disable a two factor authentication method.
 *
 * :param session: The session to use
 * :param method: The two factor method to enable/disable, i.e. ``"email"``, ``"sms"``, ``"phone"``, ``"gauth"``
 * :param twofactor_details: The two factor method and associated data such as an email address. :ref:`twofactor-detail`
 * :param call: Destination for the resulting GA_auth_handler to perform the action
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``twofactor_details`` will be emptied when the call completes.
 */
GDK_API int GA_change_settings_twofactor(
    struct GA_session* session, const char* method, GA_json* twofactor_details, struct GA_auth_handler** call);
/**
 * Request to begin the two factor authentication reset process.
 *
 * Returns the ``"twofactor_reset"`` portion of :ref:`twofactor_configuration` in
 * the GA_auth_handler result.
 *
 * :param session: The session to use.
 * :param email: The new email address to enable once the reset waiting period expires.
 * :param is_dispute: GA_TRUE if the reset request is disputed, GA_FALSE otherwise.
 * :param call: Destination for the resulting GA_auth_handler to request the reset.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 */
GDK_API int GA_twofactor_reset(
    struct GA_session* session, const char* email, uint32_t is_dispute, struct GA_auth_handler** call);
/**
 * Undo a request to begin the two factor authentication reset process.
 *
 * Returns the ``"twofactor_reset"`` portion of :ref:`twofactor_configuration` in
 * the GA_auth_handler result.
 *
 * :param session: The session to use.
 * :param email: The email address to cancel the reset request for. Must be
 *|     the email previously passed to `GA_twofactor_reset`.
 * :param call: Destination for the resulting GA_auth_handler to request the reset.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: Unlike `GA_twofactor_cancel_reset`, this call only removes the reset
 *|     request associated with the given email. If other emails have requested
 *|     a reset, the wallet will still remain locked following this call.
 */
GDK_API int GA_twofactor_undo_reset(struct GA_session* session, const char* email, struct GA_auth_handler** call);
/**
 * Cancel all two factor reset requests and unlock the wallet for normal operation.
 *
 * This call requires authentication using an existing wallet twofactor method.
 *
 * Returns the ``"twofactor_reset"`` portion of :ref:`twofactor_configuration` in
 * the GA_auth_handler result.
 *
 * :param session: The session to use.
 * :param call: Destination for the resulting GA_auth_handler to cancel the reset.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 */
GDK_API int GA_twofactor_cancel_reset(struct GA_session* session, struct GA_auth_handler** call);
/**
 * Change twofactor limits settings.
 *
 * :param session: The session to use.
 * :param limit_details: Details of the new :ref:`transaction-limits`
 * :param call: Destination for the resulting GA_auth_handler to perform the change.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``limit_details`` will be emptied when the call completes.
 */
GDK_API int GA_twofactor_change_limits(
    struct GA_session* session, GA_json* limit_details, struct GA_auth_handler** call);
/**
 * Free a string returned by the api.
 *
 * :param str: The string to free.
 */
GDK_API void GA_destroy_string(char* str);
/**
 * Get up to 32 random bytes.
 *
 * Generate up to 32 random bytes using the same strategy as Bitcoin Core code.
 *
 * :param output_bytes: bytes output buffer
 * :param siz: Number of bytes to return (max. 32)
 */
GDK_API int GA_get_random_bytes(size_t num_bytes, unsigned char* output_bytes, size_t len);
/**
 * Generate a new random BIP 39 mnemonic.
 *
 * :param output: The generated mnemonic phrase.
 *|     Returned string should be freed using `GA_destroy_string`.
 */
GDK_API int GA_generate_mnemonic(char** output);
/**
 * Generate a new random 12 word BIP 39 mnemonic.
 *
 * :param output: The generated mnemonic phrase.
 *|     Returned string should be freed using `GA_destroy_string`.
 */
GDK_API int GA_generate_mnemonic_12(char** output);
/**
 * Validate a BIP 39 mnemonic.
 *
 * :param mnemonic: The mnemonic phrase
 * :param valid: Destination for the result: GA_TRUE if the mnemonic is valid else GA_FALSE
 */
GDK_API int GA_validate_mnemonic(const char* mnemonic, uint32_t* valid);
/**
 * Register a network configuration
 *
 * :param name: The name of the network to register
 * :param network_details: The :ref:`network` configuration to register
 *
 * Any existing configuration with the same name is overwritten.
 * If the provided JSON is empty, any existing configuration for
 * the network is removed.
 *
 */
GDK_API int GA_register_network(const char* name, const GA_json* network_details);
/**
 * Get the available network configurations
 *
 * :param output: Destination for the :ref:`networks-list`
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_networks(GA_json** output);
/**
 * Get a uint32_t in the range 0 to (upper_bound - 1) without bias
 *
 * :param output: Destination for the generated uint32_t.
 */
GDK_API int GA_get_uniform_uint32_t(uint32_t upper_bound, uint32_t* output);