lib/ffi/generated_bindings.dart


  /// Enable or disable a two factor authentication method.
  ///
  /// :param session: The session to use
  /// :param method: The two factor method to enable/disable, i.e. ``"email"``, ``"sms"``, ``"phone"``, ``"gauth"``
  /// :param twofactor_details: The two factor method and associated data such as an email address. :ref:`twofactor-detail`
  /// :param call: Destination for the resulting GA_auth_handler to perform the action
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_change_settings_twofactor(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> method,
    ffi.Pointer<GA_json> twofactor_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_change_settings_twofactor(
      session,
      method,
      twofactor_details,
      call,
    );
  }

  late final _GA_change_settings_twofactorPtr =
      _lookup<ffi.NativeFunction<NativeGA_change_settings_twofactor>>(
          'GA_change_settings_twofactor');
  late final _GA_change_settings_twofactor = _GA_change_settings_twofactorPtr
      .asFunction<DartGA_change_settings_twofactor>();

  /// Request to begin the two factor authentication reset process.
  ///
  /// Returns the ``"twofactor_reset"`` portion of :ref:`twofactor_configuration` in
  /// the GA_auth_handler result.
  ///
  /// :param session: The session to use.
  /// :param email: The new email address to enable once the reset waiting period expires.
  /// :param is_dispute: GA_TRUE if the reset request is disputed, GA_FALSE otherwise.
  /// :param call: Destination for the resulting GA_auth_handler to request the reset.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_twofactor_reset(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> email,
    int is_dispute,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_twofactor_reset(
      session,
      email,
      is_dispute,
      call,
    );
  }

  late final _GA_twofactor_resetPtr =
      _lookup<ffi.NativeFunction<NativeGA_twofactor_reset>>(
          'GA_twofactor_reset');
  late final _GA_twofactor_reset =
      _GA_twofactor_resetPtr.asFunction<DartGA_twofactor_reset>();

  /// Undo a request to begin the two factor authentication reset process.
  ///
  /// Returns the ``"twofactor_reset"`` portion of :ref:`twofactor_configuration` in
  /// the GA_auth_handler result.
  ///
  /// :param session: The session to use.
  /// :param email: The email address to cancel the reset request for. Must be
  /// |     the email previously passed to `GA_twofactor_reset`.
  /// :param call: Destination for the resulting GA_auth_handler to request the reset.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  ///
  /// .. note:: Unlike `GA_twofactor_cancel_reset`, this call only removes the reset
  /// |     request associated with the given email. If other emails have requested
  /// |     a reset, the wallet will still remain locked following this call.
  int GA_twofactor_undo_reset(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> email,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_twofactor_undo_reset(
      session,
      email,
      call,
    );
  }

  late final _GA_twofactor_undo_resetPtr =
      _lookup<ffi.NativeFunction<NativeGA_twofactor_undo_reset>>(
          'GA_twofactor_undo_reset');
  late final _GA_twofactor_undo_reset =
      _GA_twofactor_undo_resetPtr.asFunction<DartGA_twofactor_undo_reset>();

  /// Cancel all two factor reset requests and unlock the wallet for normal operation.
  ///
  /// This call requires authentication using an existing wallet twofactor method.
  ///
  /// Returns the ``"twofactor_reset"`` portion of :ref:`twofactor_configuration` in
  /// the GA_auth_handler result.
  ///
  /// :param session: The session to use.
  /// :param call: Destination for the resulting GA_auth_handler to cancel the reset.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_twofactor_cancel_reset(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_twofactor_cancel_reset(
      session,
      call,
    );
  }

  late final _GA_twofactor_cancel_resetPtr =
      _lookup<ffi.NativeFunction<NativeGA_twofactor_cancel_reset>>(
          'GA_twofactor_cancel_reset');
  late final _GA_twofactor_cancel_reset =
      _GA_twofactor_cancel_resetPtr.asFunction<DartGA_twofactor_cancel_reset>();

  /// Change twofactor limits settings.
  ///
  /// :param session: The session to use.
  /// :param limit_details: Details of the new :ref:`transaction-limits`
  /// :param call: Destination for the resulting GA_auth_handler to perform the change.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_twofactor_change_limits(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> limit_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_twofactor_change_limits(
      session,
      limit_details,
      call,
    );
  }

  late final _GA_twofactor_change_limitsPtr =
      _lookup<ffi.NativeFunction<NativeGA_twofactor_change_limits>>(
          'GA_twofactor_change_limits');
  late final _GA_twofactor_change_limits = _GA_twofactor_change_limitsPtr
      .asFunction<DartGA_twofactor_change_limits>();

  /// Free a string returned by the api.
  ///
  /// :param str: The string to free.
  void GA_destroy_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _GA_destroy_string(
      str,
    );
  }

  late final _GA_destroy_stringPtr =
      _lookup<ffi.NativeFunction<NativeGA_destroy_string>>('GA_destroy_string');
  late final _GA_destroy_string =
      _GA_destroy_stringPtr.asFunction<DartGA_destroy_string>();

  /// Get up to 32 random bytes.
  ///
  /// Generate up to 32 random bytes using the same strategy as Bitcoin Core code.
  ///
  /// :param output_bytes: bytes output buffer
  /// :param siz: Number of bytes to return (max. 32)
  int GA_get_random_bytes(
    int num_bytes,
    ffi.Pointer<ffi.UnsignedChar> output_bytes,
    int len,
  ) {
    return _GA_get_random_bytes(
      num_bytes,
      output_bytes,
      len,
    );
  }

  late final _GA_get_random_bytesPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_random_bytes>>(
          'GA_get_random_bytes');
  late final _GA_get_random_bytes =
      _GA_get_random_bytesPtr.asFunction<DartGA_get_random_bytes>();

  /// Generate a new random BIP 39 mnemonic.
  ///
  /// :param output: The generated mnemonic phrase.
  /// |     Returned string should be freed using `GA_destroy_string`.
  int GA_generate_mnemonic(
    ffi.Pointer<ffi.Pointer<ffi.Char>> output,
  ) {
    return _GA_generate_mnemonic(
      output,
    );
  }

  late final _GA_generate_mnemonicPtr =
      _lookup<ffi.NativeFunction<NativeGA_generate_mnemonic>>(
          'GA_generate_mnemonic');
  late final _GA_generate_mnemonic =
      _GA_generate_mnemonicPtr.asFunction<DartGA_generate_mnemonic>();

  /// Generate a new random 12 word BIP 39 mnemonic.
  ///
  /// :param output: The generated mnemonic phrase.
  /// |     Returned string should be freed using `GA_destroy_string`.
  int GA_generate_mnemonic_12(
    ffi.Pointer<ffi.Pointer<ffi.Char>> output,
  ) {
    return _GA_generate_mnemonic_12(
      output,
    );
  }

  late final _GA_generate_mnemonic_12Ptr =
      _lookup<ffi.NativeFunction<NativeGA_generate_mnemonic_12>>(
          'GA_generate_mnemonic_12');
  late final _GA_generate_mnemonic_12 =
      _GA_generate_mnemonic_12Ptr.asFunction<DartGA_generate_mnemonic_12>();

  /// Validate a BIP 39 mnemonic.
  ///
  /// :param mnemonic: The mnemonic phrase
  /// :param valid: Destination for the result: GA_TRUE if the mnemonic is valid else GA_FALSE
  int GA_validate_mnemonic(
    ffi.Pointer<ffi.Char> mnemonic,
    ffi.Pointer<ffi.Uint32> valid,
  ) {
    return _GA_validate_mnemonic(
      mnemonic,
      valid,
    );
  }

  late final _GA_validate_mnemonicPtr =
      _lookup<ffi.NativeFunction<NativeGA_validate_mnemonic>>(
          'GA_validate_mnemonic');
  late final _GA_validate_mnemonic =
      _GA_validate_mnemonicPtr.asFunction<DartGA_validate_mnemonic>();

  /// Register a network configuration
  ///
  /// :param name: The name of the network to register
  /// :param network_details: The :ref:`network` configuration to register
  ///
  /// Any existing configuration with the same name is overwritten.
  /// If the provided JSON is empty, any existing configuration for
  /// the network is removed.
  int GA_register_network(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<GA_json> network_details,
  ) {
    return _GA_register_network(
      name,
      network_details,
    );
  }

  late final _GA_register_networkPtr =
      _lookup<ffi.NativeFunction<NativeGA_register_network>>(
          'GA_register_network');
  late final _GA_register_network =
      _GA_register_networkPtr.asFunction<DartGA_register_network>();

  /// Get the available network configurations
  ///
  /// :param output: Destination for the :ref:`networks-list`
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_networks(
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_get_networks(
      output,
    );
  }

  late final _GA_get_networksPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_networks>>('GA_get_networks');
  late final _GA_get_networks =
      _GA_get_networksPtr.asFunction<DartGA_get_networks>();

  /// Get a uint32_t in the range 0 to (upper_bound - 1) without bias
  ///
  /// :param output: Destination for the generated uint32_t.
  int GA_get_uniform_uint32_t(
    int upper_bound,
    ffi.Pointer<ffi.Uint32> output,
  ) {
    return _GA_get_uniform_uint32_t(
      upper_bound,
      output,
    );
  }

  late final _GA_get_uniform_uint32_tPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_uniform_uint32_t>>(
          'GA_get_uniform_uint32_t');
  late final _GA_get_uniform_uint32_t =
      _GA_get_uniform_uint32_tPtr.asFunction<DartGA_get_uniform_uint32_t>();

  int validate_submarine(
    ffi.Pointer<ffi.Char> preimage_hash,
    ffi.Pointer<ffi.Char> claim_public_key,
    ffi.Pointer<ffi.Char> refund_public_key,
    int timeout_block_height,
    ffi.Pointer<ffi.Char> lockup_address,
    ffi.Pointer<ffi.Char> redeem_script,
    ffi.Pointer<ffi.Char> blinding_key,
  ) {
    return _validate_submarine(
      preimage_hash,
      claim_public_key,
      refund_public_key,
      timeout_block_height,
      lockup_address,
      redeem_script,
      blinding_key,
    );
  }

  late final _validate_submarinePtr =
      _lookup<ffi.NativeFunction<NativeValidate_submarine>>(
          'validate_submarine');
  late final _validate_submarine =
      _validate_submarinePtr.asFunction<DartValidate_submarine>();

  ffi.Pointer<ffi.Char> extract_claim_public_key(
    ffi.Pointer<ffi.Char> comparison_script,
  ) {
    return _extract_claim_public_key(
      comparison_script,
    );
  }

  late final _extract_claim_public_keyPtr =
      _lookup<ffi.NativeFunction<NativeExtract_claim_public_key>>(
          'extract_claim_public_key');
  late final _extract_claim_public_key =
      _extract_claim_public_keyPtr.asFunction<DartExtract_claim_public_key>();

  ffi.Pointer<ffi.Char> create_and_sign_claim_transaction(
    ffi.Pointer<ffi.Char> redeem_script,
    ffi.Pointer<ffi.Char> blinding_key,
    ffi.Pointer<ffi.Char> onchain_address,
    ffi.Pointer<ffi.Char> private_key,
    ffi.Pointer<ffi.Char> preimage,
    ffi.Pointer<ffi.Char> tx,
    int fees,
  ) {
    return _create_and_sign_claim_transaction(
      redeem_script,
      blinding_key,
      onchain_address,
      private_key,
      preimage,
      tx,
      fees,
    );
  }
